<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Renfe</string>
    <string name="action_settings">Settings</string>
    <string name="edit_username">Insertar usuario</string>
    <string name="edit_pass">Insertar Contraseña: </string>
    <string name="text_username">Usuario</string>
    <string name="text_pass">Contraseña:</string>
    <string name="button_login">Loguear </string>
    <string name="title_activity_loged">LogedActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="button_timetable">Tabla Horarios</string>
    <string name="button_buytickets">Comprar</string>
    <string name="title_activity_time_table">TimeTable</string>
    <string name="origin">Origin station</string>
    <string name="opcion"></string>
    <string name="button_origin">Origin</string>
    <string name="title_activity_timetable">TimetableActivity</string>
    <string name="text_Origin">Escoge la parada de origen</string>
    <string name="text_Destination">Escoge la parada de Destino</string>
    <string name="VER">Ver horario</string>
    <string name="title_activity_horario">Horario</string>
    <string name="text_horari">horario</string>
    <string name="text_escoger">Escoge la linia de tren que quieres consultar!</string>
    <string name="title_escoger_linia">Escoger_linia</string>
    <string name="Search">Siguiente</string>
    <string name="Origen">Estacion Origen: </string>
    <string name="Desti">Estacion Desti: </string>
    <string name="edit_Origen">Escribe la estacion de origen </string>
    <string name="edit_Desti">Escribe la estacion de destino  </string>
    <string name="button_comprar">Comprar</string>
    <string name="button_T10">Comprar T10</string>
    <string name="title_activity_T10">T10</string>
    <string name="title_activity_Comprando">Comprando</string>
    <string name="title_activity_Comprar">Comprar</string>
    <string name="text_T10">Paga 10,35€.</string>
    <string name="Tren_Origen"></string>
    <string name="Tren_Destino"></string>
    <string name="ida">Ida</string>
    <string name="vuelta">Ida y vuelta</string>
    <string name="title_activity_pagina_principal">Home</string>
    <string name="title_activity_registrar__android">Registrar Usuario</string>
    <string name="title_activity_fila">Fila</string>
    <string name="title_activity_listado">Juegos</string>
    <string name="title_activity_mostrar_web">Web PES-SHOP</string>
    <string name="user">Usuario:</string>
    <string name="pass">Contraseña:</string>
    <string name="int_user">Introduce usuario</string>
    <string name="int_pass">Introduce Password</string>
    <string name="info_1">Si ya estas registrado, introduce usuario, password y pulsa Login</string>
    <string name="cre_user">Pulsa Registrar para crear un nuevo usuario</string>
    <string name="regi">Registrar</string>
    <string name="log">Loguear</string>
    <string name="title_activity_mostrar__horario">Mostrar_Horario</string>
    <string name="button_VerPlanol">Ver Planos</string>
    <string name="title_activity_fila_larga_">Fila_larga_</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fila_larga">FilaLarga</string>
    <string name="title_activity_confirmar_compra">ConfirmarCompra</string>
    <string name="title_activity_compra_realizada">CompraRealizada</string>
    <string name="fecha">16/01/2015</string>
    <string name="info10">Inserte la fecha </string>

</resources>