<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.renfe_badr.Comprar" >
    
     <TextView android:id="@+id/Origen" 
        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
          android:text="@string/Origen" />
     
     <Spinner
        android:id="@+id/escoge_Origen"
        android:layout_width="111dp"
        android:layout_height="32dp"
        android:layout_gravity="right" />
    
    <TextView android:id="@+id/Desti" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/Desti" />
    
     <Spinner
        android:id="@+id/escoge_Destino"
        android:layout_width="111dp"
        android:layout_height="32dp"
        android:layout_gravity="right" />
     
     <RadioGroup
        android:id="@+id/rdgGrupo"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rdbOne">
    <RadioButton
            android:id="@+id/Ida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ida" />
       <RadioButton
            android:id="@+id/Vuelta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vuelta" />
    </RadioGroup>
    
     <TextView
        android:id="@+id/Fecha_D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:text="@string/info10"
        android:ems="10" >
    </TextView>
    
      <EditText
        android:id="@+id/editTextFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/fecha"
        android:inputType="text"
        android:textColorHint="#EEEEEE" />
    <LinearLayout
          android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:gravity="center"
        android:orientation="vertical" 
        >
     
    <Button android:id="@+id/button_Comprar"
        style="@style/ButtonText"
         android:background="@drawable/bluebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_comprar"
        android:onClick="Compra"/>
    
    </LinearLayout>
    

</LinearLayout>
