<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.renfe.MainActivity" >

     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/user" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/int_user"
        android:textColorHint="#EEEEEE" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="40dp"
        android:text="@string/pass" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/int_pass"
        android:inputType="textPassword"
        android:textColorHint="#EEEEEE" />
    
     <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="41dp"
        android:text="@string/info_1"
        android:textSize="15dp" />
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal" >

     <Button
         android:id="@+id/button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/ButtonText"
         android:background="@drawable/bluebutton"
         android:gravity="center"
         android:onClick="Login"
         android:text="@string/button_login" />
     </LinearLayout>
        
     
        <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/abrirregistrar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textSize="13dp"
        android:text="@string/cre_user" />
        
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal" > 

        <Button
            android:id="@+id/abrirregistrar"
            style="@style/ButtonText"
            android:background="@drawable/bluebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:onClick="abrirRegistrar"
            android:text="@string/regi" />

   
    </LinearLayout>
 
       
    
     
    
    
    

</LinearLayout>