<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.renfe_badr.StartActivity" >
    
   
        <TextView 
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:text="@string/opcion"/>

    <Button
        android:id="@+id/button_timetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="Timetable"
        android:text="@string/button_timetable" 
        android:layout_marginTop="20dp"
        style="@style/ButtonText"
        android:background="@drawable/bluebutton"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/button_buytickets"
        style="@style/ButtonText"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/bluebutton"
        android:gravity="center"
        android:onClick="BuyTickets"
        android:text="@string/button_buytickets" 
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>
    
    <Button
        android:id="@+id/button_Planol"
        style="@style/ButtonText"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/bluebutton"
        android:gravity="center"
        android:onClick="VerPlanol"
        android:text="@string/button_VerPlanol" />

</LinearLayout>