<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.renfe_badr.TimetableActivity" >

    <TextView
        android:id="@+id/text_Origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/text_Origin" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="111dp"
        android:layout_height="32dp"
        android:layout_gravity="right" />

    <TextView
        android:id="@+id/text_Destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
       
        android:layout_marginTop="6dp"
        android:text="@string/text_Destination" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="111dp"
        android:layout_height="32dp"
      android:layout_gravity="right"/>
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:gravity="center"
        android:orientation="horizontal" >
    
     <Button android:id="@+id/Cnslt_TimeTBL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VER"
        android:onClick="Consulta_horario"
        style="@style/ButtonText"
        android:background="@drawable/bluebutton"/>

     </LinearLayout>
</LinearLayout>
