<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.renfe_badr.Escoger_linia" >
    
    <TextView
        android:id="@+id/escoger_linia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/text_escoger" />

    <Spinner
        android:id="@+id/escoge_lin"
        android:layout_width="111dp"
        android:layout_height="32dp"
        android:layout_gravity="right" />
    
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:gravity="center"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/Buscar_por_linia"
        style="@style/ButtonText"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bluebutton"
        android:onClick="Buscar_linia"
        android:text="@string/Search"
        android:textSize="15sp" />
</LinearLayout>
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal" >
        
    <Button
        android:id="@+id/button_T10"
        style="@style/ButtonText"
        android:layout_width="126dp" 
        android:layout_height="wrap_content"
        android:background="@drawable/bluebutton"
        android:onClick="Comprar_T10"
        android:text="@string/button_T10"
        android:textSize="15sp" />
</LinearLayout>
</LinearLayout>
